--- a/l10n_ve_config_withholding/views/account_journal_views.xml
+++ b/l10n_ve_config_withholding/views/account_journal_views.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <odoo>
+    <!-- account.journal form view -->
     <record id="view_account_journal_form" model="ir.ui.view">
         <field name="name">account.journal.form</field>
         <field name="model">account.journal</field>
